
3.3.22	* update APKBUILD for separate objc and objc-doc packages

	* allow __typeof__ as equivalent to __typeof

	* add pkg/objc.ebuild for build of XPAK Gentoo Linux package

3.3.21  * update util/config.wmk for WATCOM on Microsoft Windows10 Pro 64bit
	  (thanks to Dmitry Kirichenko for reporting this)

	* update Microsoft VisualC++ util/config.nmk for Windows10 Pro

	* add pkg/APKBUILD file for apk package on AlpineLinux

	* split install target in toplevel Makefile in installman

	* cleanup configure and objc driver remove old 2.x.x cplusplus option

3.3.20  * update pkg/prototype for SVR4 Solaris 10 package

	* update pkg/pkginfo for SVR4 Solaris 10 package

	* change top Makefile.in to use simple 'cp' instead of 'install'
	  because it copies multiple files into a destination directory
	  the individual src/*/Makefile's continue to use 'install'
	  the src/objc/Makefile is issuing 'install' for each file it installs

	* Sun C specific add -fast option for maximum runtime performance
	  an option of the Sun C compiler to compile with -xregs=frameptr
	  and use the frame pointer as a general purpose register (x64 ABI)

	  to compile POC with -fast : ./configure EXTRA_MFLAGS=-fast

	  this suppress the framepointer so incompatible with some tools

3.3.19  * cleanup the printstack code in doesNotRecognize:/doesNotUnderstand:

	* set AC_CONFIG_SRCDIR(block98.html) in configure for autoconf 2.68

	* fix postlink test in configure script not to use srcdir,

3.3.18  * removed xstr sources

	* update objc.spec file

	* fix a cast (void*)0 to (IMP)0 which was generated in the case
	  of a block with numheapvarblocks == 0, ie. without heap promoted
	  variables from the surrounding scope
	  this generated a (harmless) compile warning with SunPro cc

	* add a #define OBJCRT_MALLOC_IMPCACHE in objcrt
	  that allows us to build debug libraries for use with DBX 
	  check -access and check -memuse runtime checking and reports
