@@ -30,8 +30,8 @@ D/words////
 /bootSrc/1.34/Wed Sep 30 11:46:41 2020//
 /Watcom.txt/1.4/Wed Sep 30 17:05:26 2020//
 /Visual.txt/1.5/Wed Sep 30 17:06:31 2020//
-/Makefile.in/1.22/Fri Oct  2 06:59:30 2020//
-/configure.in/1.82/Mon Oct  5 08:32:02 2020//
-/configure/1.83/Mon Oct  5 07:22:41 2020//
 /Platform.txt/1.42/Wed Oct  7 11:32:12 2020//
-/Changes.txt/1.119/Thu Oct  8 14:14:37 2020//
+/configure/1.84/Fri Oct  9 12:36:30 2020//
+/configure.in/1.83/Fri Oct  9 12:49:32 2020//
+/Changes.txt/1.120/Fri Oct  9 12:48:32 2020//
+/Makefile.in/1.23/Fri Oct  9 12:49:32 2020//
