@@ -5,6 +5,8 @@
 
 	* add pkg/objc.ebuild for build of XPAK Gentoo Linux package
 
+	* change top Makefile compiler target for gmake -j (multiple jobs)
+
 3.3.21  * update util/config.wmk for WATCOM on Microsoft Windows10 Pro 64bit
 	  (thanks to Dmitry Kirichenko for reporting this)
 
